<resources>
    <string name="app_name_title">s-Parking Vyoma Apollo</string>
        <string name="app_name">s-Parking Vyoma Apollo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="location_service_disabled">Please enable location setting.</string>
    <string name="btnYes">Yes</string>
    <string name="btnNo">No</string>
    <string name="validation_name">s-Parking Vyoma Apollo</string>
    <string name="btn_ok">ok</string>
    <string name="poweredby">sParking</string>
    <string name="device_id">Enter Device ID</string>
    <string name="submit"><![CDATA[Submit]]></string>
    <string name="heading">heading</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i">i</string>
    <string name="smart">Smart</string>
    <string name="btn_na">NA</string>
    <string name="ok">OK</string>
    <string name="answer">Answer</string>
    <string name="btn_login">Login</string>
    <string name="btn_otp">OTP</string>
    <string name="price">300</string>
    <string name="oops">Oops!</string>
    <string name="btn_resend_otp">Resend OTP</string>
    <string name="editprofile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="SyncNow">SyncNow</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="btn_save">Save</string>
    <string name="btn_submit">Submit</string>
    <string name="NoInternetConnection">No Internet Connection Please check your Internet Connectivity.</string>
    <string name="cancel">CANCEL</string>
    <string name="facebook_app_id">499309960575662</string>
    <string name="fb_login_protocol_scheme">fb499309960575662</string>
    <string name="title_activity_offline_details">OfflineDetailsActivity</string>
    <string name="home">Home</string>
    <string name="youareoffline">You are in Offline mode</string>
    <string name="tryagain">Try Again</string>
    <string name="personal_details">Booking Details</string>
    <string name="bill_details">Bill Details</string>
    <string name="pass_type">Pass Type</string>
    <string name="Enter_mobilenumber">Enter mobile number</string>
    <string name="delete">Delete</string>
    <string name="action_settings">Refresh</string>
    <string name="wheeler_type">Vehicle Type</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main_dashboard">MainDashboard</string>
    <string name="title_activity_smart_parking">Smart Parking Agent</string>
    <string-array name="VehicleType">
        <item>2 Wheeler</item>
        <item>4 Wheeler</item>
        <item>Big Vehicle</item>
    </string-array>
    <string name="title_activity_smart_agent">SmartAgent</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Vyoma Innovis</string>
    <string name="backdrop_title">News Heading</string>
    <string name="backdrop_subtitle">Date</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="bt_login">Log In</string>
    <string name="check_in">Check in</string>
    <string name="check_in_message">Parking START with payment mode CASH</string>
    <string name="parking_slot">Parking slot number</string>
    <string name="vichele_number">Vechile number</string>
    <string name="vichele_type">Vechile type</string>
    <string name="contact_num">Contact no</string>
    <string name="mobile_no">Enter Mobile No</string>
    <string name="btn_send">Send</string>
    <string name="end_parking">End Parking</string>
    <string name="btn_send_otp">Send OTP</string>
    <string name="start_parking">Start Parking</string>
    <string name="slip">Parking Receipt</string>
    <string name="Message">Message</string>
    <string name="search_vechile">Search By Vehicle Number</string>
    <string name="alt_no">7998142392</string>
    <string name="payment_mode">Paytm</string>
    <string name="title_activity_end_parking">EndParkingActivity</string>
    <string name="title_activity_mobile">MobileActivity</string>
    <string name="title_activity_otp">OtpActivity</string>
    <string name="title_activity_vehicle_owner_registration">VehicleOwnerRegistrationActivity</string>
    <string name="payment_mood">Payment Mode</string>
    <string name="cash">Cash</string>
    <string name="Print">Print</string>
    <string name="Alternate_mobile">Alternate Mobile Number</string>
    <string name="Alternate_mobile_new">Alternate Number</string>
    <string name="Owner_mobile_new">Owner Mobile Number</string>
    <string name="payment_modetxt">Payment Mode:</string>
    <string name="paymentmode">Payment Mode</string>
    <string name="fine_amount">Fine Amount</string>
    <string name="offer_amount">Discount</string>
    <string name="to_pay">To Pay</string>
    <string name="Register_Mobile_Number">Register Mobile Number</string>
    <string name="Alternative_Number">Alternative Number</string>
    <string name="StartParking">Start Parking</string>
    <string name="Error_Information">Error Information</string>
    <string name="Phone_No">Phone No</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="Checkouttime">Checkouttime</string>
    <string name="Amount">Amount</string>
    <string name="EnterOTP">Enter OTP</string>
    <string name="ValidateOTP">Validate OTP</string>
    <string name="ResendOTP">Resend OTP</string>
    <string name="VehicleNumber">Vehicle Number</string>
    <string name="Check_in_time">Check In Time</string>
    <string name="Check_in_date">Check In Date</string>
    <string name="book_in_id">Booking Id</string>
    <string name="acess_control">Access Control Amount</string>
    <string name="OR">OR</string>
    <string name="ScanQR">Scan QR</string>
    <string name="QRScan">Scan</string>
    <string name="Next">Next</string>
    <string name="check_In">Check In</string>
    <string name="EndParking">End Parking</string>
    <string name="Enter_username">Enter user name</string>
    <string name="Enterpassword">Enter password</string>
    <string name="vld_mbl_msg">Enter Your Valid Mobile Number</string>
    <string name="vld_vehicle_msg">Enter Valid Vehicle Number</string>
    <string name="recieved">Recieved</string>
    <string name="NotRecieved">Not Recieved</string>
    <string name="suritychek">Are you sure to end Parking?</string>
    <string name="doubletapmsg">Please click BACK again to exit!</string>
    <string name="unable_qr_read">Could not read QR.</string>
    <string name="proper_qr_read">Scan Proper QR code for checkin</string>
    <string name="notparked">This Vechile is not Parked Yet</string>
    <string name="vehicle_num_vld">Valid Vehicle number is required</string>
    <string name="phone_vnumber">Phone number is required</string>
    <string name="vehicle_type">Vehicle type is required</string>
    <string name="checking_vtime">Check time is required</string>
    <string name="checking_vdate">Check date is required</string>
    <string name="offline_mode">You are in offline mode</string>
    <string name="booking_vid">Booking Id is required</string>
    <string name="booking_validid">Enter proper booking ID</string>
    <string name="acess_vamount">Acess Control Amount is Required</string>
    <string name="username_vld">Username is required</string>
    <string name="pass_vld">Password is required</string>
    <string name="otpvld">Enter Your OTP</string>
    <string name="twowhlr">Two Wheeler</string>
    <string name="fourwhlr">Four Wheeler</string>
    <string name="bigwhlr">Big Vehicle</string>
    <string name="Entername">Enter name</string>
    <string name="Register">Register</string>
    <string name="update">Please Update First..!!</string>
    <string name="updte">Update</string>
    <string name="BookingNo">Booking No</string>
    <string name="VechileNo">Vechile No</string>
    <string name="Vechile_Type">Vechile Type</string>
    <string name="date">12/12/12 04:45</string>
    <string name="location">Location</string>
    <string name="selectvtype">Select Vehicle Type</string>
    <string name="cancel_msg">Your Vehicle is Successfully Registered, Kindly CheckIn Again !</string>
    <string name="register_msg">Your Vehicle is not Registered.Please try to Registered</string>
    <string name="paymentreciept">Have You Recieved The Payment?</string>
    <string name="loginfailed">Login Failed</string>
    <string name="validate_mobile">Valid Phone Number Required</string>
    <string name="terms_condition_txt"><![CDATA[By logging in you agree to s-parking\'s Terms & Conditions and Privacy Policy]]></string>
    <string name="vld_name">Enter Valid Name</string>
    <string name="term_service"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="no_item">No CheckIn List Found</string>
    <string name="no_item_advancebook">No Advance Book Request Found</string>
    <string name="retry">Retry</string>
    <string name="check_text">Special Pass</string>
    <string name="selectpasstype">Select Pass Type</string>
    <string name="validate_storepass">Please Select a valid Special Store Pass</string>
    <string name="bluetooth_name">BlueTooth Printer</string>
    <string name="print">Print</string>
    <string name="printer_setting">Configure Printer</string>
    <string name="add_printer">Add New Printer</string>
    <string name="printer_name">Enter Printer Name</string>
    <string name="printer_name_required">Printer Name Required !</string>
    <string name="rs">\\u20B9</string>
    <string name="bluetooth_check">Do you want to turn on Bluetooth</string>
    <string name="statecode">WB</string>
    <string name="statecode_ts">TS</string>
    <string name="defaultmobilenumber">0000000000</string>
    <string name="printerissue">Printer connection issue Please try again</string>
    <string name="novehiclefound">No vehicle found with this number.</string>
    <string name="vehicle_type_vld">Vehicle Type Required</string>
    <string name="vld_mobile_msg">Enter Valid Mobile Number</string>
    <string name="bluetooth_printer">Bluetooth Printer</string>
    <string name="pos">POS</string>
    <string name="none">None</string>
    <string name="two_wheel">Two Wheeler</string>
    <string name="four_wheel">Four Wheeler</string>
    <string name="special_pass">Special Pass</string>
    <string name="normal_pass">Monthly Pass</string>
    <string name="title_activity_offline_check_in">OfflineCheckInActivity</string>
    <string name="change_netwrk_mode">Change Network Mode</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="select_net_mode">Please Select Network Mode</string>
    <string name="parking_succesfully">Parking Succesfully Started</string>
    <string name="Check_out_time">Check out time</string>
    <string name="checkedout">Checked Out Sucessfully</string>
    <string name="pos_new">POS Udyama</string>
    <string name="title_activity_railway_checkin">RailwayCheckinActivity</string>
    <string name="acess_control_head">Access Control</string>
    <string name="about_app">About App</string>
    <string name="notification">Notifications</string>
    <string name="AdvanceBook">Advance Booking List</string>
    <string name="pos_new_park">Telpo POS</string>
    <string name="configure_boom">Config Boom Gate IP</string>
    <string name="enter_boom_ip">Enter Boom Gate IP</string>
    <string name="enter_boom_gate_no">Enter Boom Gate No</string>
    <string name="pos_9210">POS 9210</string>
    <string name="pax">Pax</string>
    <string name="parking_summary">Parking Summary</string>
</resources>