<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/_7sdp">
        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/sp_20"
            android:padding="@dimen/_7sdp"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/bottom_line_color"
            android:alpha="0.4"
            android:layout_marginTop="@dimen/_3sdp"/>
        <TextView
            android:id="@+id/msg_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sp_20"
            android:text="@string/btn_ok"
            android:layout_marginBottom="@dimen/_7sdp"
            android:textSize="@dimen/sp_16"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnno"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_37sdp"
                android:text="@string/btnNo"
                android:layout_marginTop="@dimen/sp_20"
                android:textColor="@color/white"
                android:layout_margin="@dimen/_7sdp"
                android:background="@color/colorAccent"
                android:textSize="@dimen/sp_16" />
            <Button
                android:id="@+id/btnyes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_37sdp"
                android:text="@string/btnYes"
                android:layout_marginTop="@dimen/sp_20"
                android:textColor="@color/white"
                android:layout_margin="@dimen/_7sdp"
                android:background="@color/green"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
