<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_rect_shape"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_event_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_mood"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/dp_20"
        android:background="@drawable/dotted_box"
        android:padding="@dimen/dp_10"/>

        <TextView
            android:id="@+id/msg_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/payment_mode"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/sp_16"
            android:layout_marginBottom="@dimen/dp_50"/>

        <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="@dimen/dp_10"
           android:layout_gravity="center">


           <Button
               android:id="@+id/bt_cash"
               android:layout_width="0dp"
               android:layout_height="@dimen/dp_50"
               android:text="@string/cash"
               android:layout_weight="1"
               android:layout_marginTop="@dimen/sp_20"
               android:textColor="@color/white"
               android:layout_margin="@dimen/dp_10"
               android:background="@color/green"
               android:textSize="@dimen/sp_16" />

           <Button
               android:id="@+id/bt_cancel"
               android:layout_width="0dp"
               android:layout_height="@dimen/dp_50"
               android:text="@string/cancel"
               android:layout_weight="1"
               android:layout_marginTop="@dimen/sp_20"
               android:textColor="@color/white"
               android:layout_margin="@dimen/dp_10"
               android:background="@color/colorAccent"
               android:textSize="@dimen/sp_16" />
       </LinearLayout>



    </LinearLayout>


</LinearLayout>