<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource"
    android:background="@color/gray_edit_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/_6sdp">
        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/sp_20"
            android:padding="@dimen/_7sdp"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/bottom_line_color"
            android:alpha="0.4"
            android:layout_marginTop="@dimen/_3sdp"/>
        <EditText
            android:id="@+id/msg_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_17sdp"
            android:layout_marginRight="@dimen/_17sdp"
            android:padding="@dimen/_7sdp"
            android:drawablePadding="@dimen/dp_10"
            android:drawableLeft="@drawable/parking_boom"
            android:background="@drawable/border"
            android:hint="@string/enter_boom_ip"/>

        <EditText
            android:id="@+id/msg_txt_gate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_17sdp"
            android:layout_marginRight="@dimen/_17sdp"
            android:padding="@dimen/_7sdp"
            android:drawablePadding="@dimen/dp_10"
            android:drawableLeft="@drawable/gate"
            android:background="@drawable/border"
            android:hint="@string/enter_boom_gate_no"/>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            android:layout_margin="@dimen/_7sdp"
            android:layout_marginTop="@dimen/sp_20"
            android:background="@color/green"
            android:text="Save"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</RelativeLayout>
